# haskell-personnummer

./: .gitignore  CHANGELOG.md  LICENSE  Main.hs  Personnummer.cabal  PersonnummerTest.hs  README.md
.github/workflows/: haskell.yml
app/: Main.hs
src/: Personnummer.hs
tests/: PersonnummerTest.hs
