cabal-version:      2.4
name:               Personnummer
version:            0.1.0.0
synopsis:           Validate Swedish personal identification numbers
bug-reports:        https://github.com/bombsimon/haskell-personummer/issues
license:            MIT
license-file:       LICENSE
author:             Simon Sawert
maintainer:         simon@sawert.se

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Personnummer
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable Personnummer
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        Personnummer

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite Personnummer-tests
    default-language:    Haskell2010
    type:                exitcode-stdio-1.0
    hs-source-dirs:      src, tests, examples
    main-is:             tests/PersonnummerTest.hs
    build-depends:
        base ^>=4.12.0.0,
        HUnit ^>=1.6.0,
        Personnummer
