cabal-version:      3.6
name:               Personnummer
version:            0.1.0.0
synopsis:           Validate Swedish personal identification numbers
bug-reports:        https://github.com/bombsimon/haskell-personummer/issues
license:            MIT
license-file:       LICENSE
author:             Simon Sawert
maintainer:         simon@sawert.se

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Personnummer
    build-depends:
        base ^>=4.16.4.0,
        time ^>=1.12.1,
        regex-compat ^>=0.95.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable Personnummer
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        Personnummer
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite Personnummer-tests
    default-language:    Haskell2010
    type:                exitcode-stdio-1.0
    hs-source-dirs:      src, tests
    main-is:             PersonnummerTest.hs
    other-modules:
        Personnummer
    build-depends:
        base ^>=4.16.4.0,
        time ^>=1.12.1,
        regex-compat ^>=0.95.2.1,
        HUnit ^>=1.6.0
